# domain_patterns

domain_patterns/: Cargo.toml
domain_patterns/src/: collections.rs  event.rs
domain_patterns/tests/: integration_tests.rs
domain_patterns/tests/common/: collections.rs  mod.rs
