[package]
name = "domain_patterns"
version = "0.2.141"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
description = "Domain patterns holds patterns from the world of Domain Driven Design."
keywords = ["domain", "design", "patterns", "database", "architecture"]
categories = ["database", "data-structures", "rust-patterns"]
repository = "https://github.com/PrismaPhonic/domain_patterns"
documentation = "https://docs.rs/domain_patterns"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }

[dev-dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_json = "1.0.64"
chrono = "0.4.19"
regex = "1.4.3"
domain_derive = { version = "0.2.134", path = "../domain_derive" }
snafu = "0.6.10"
